# AI-native-frame

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
apps/web/: README.md  index.html  package-lock.json  package.json
apps/web/src/: App.css  App.tsx  index.css
configs/agents/: research.yaml
configs/workflows/: research_pipeline.yaml
docs/: ARCHITECTURE.md  CICD.md  SPECS.md
docs/adr/: 0000-adr-template.md
evals/datasets/: sample_tasks.jsonl
prompts/system/: research.md
prompts/tasks/: research_task.md
scripts/: bootstrap.sh
specs/: README.md
specs/templates/: FEATURE_SPEC_TEMPLATE.md  PRODUCT_REQUIREMENTS_TEMPLATE.md  RELEASE_CHECKLIST_TEMPLATE.md  TECHNICAL_SPEC_TEMPLATE.md  TEST_PLAN_TEMPLATE.md  UI_UX_SPEC_TEMPLATE.md
src/ai_native_frame/: __init__.py  api.py  config.py  prompts.py
src/ai_native_frame/agents/: __init__.py  base.py  research_agent.py
src/ai_native_frame/evals/: __init__.py  runner.py
src/ai_native_frame/llm/: __init__.py  base.py  factory.py  mock.py  openai_client.py
src/ai_native_frame/workflows/: __init__.py  research.py
tests/: conftest.py  test_api.py  test_eval_runner.py  test_workflow.py
